Small spacing fix

--- a/admin/app/styles/svg.scss
+++ b/admin/app/styles/svg.scss
@@ -9,7 +9,7 @@ $animationSpeed:1.5s;
     width: 100%;
     @include bp(med){
         width:50%;
-        margin:0 auto;
+        margin:10px auto;
     }
     align-items: stretch;
     align-content: stretch;
